# jaxFFTMp

./: CMakeLists.txt  README.md
examples/: example_use.py
jaxfftmp/: __init__.py  ops.py  util.py
lib/: cufftMp_wrapper.cc
